Add: proyecto para Base de Datos

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /TCPWebClinica/.vs/TCPWebClinica/FileContentIndex
+TCPWebClinica/.vs/TCPWebClinica/v17/.suo
+TCPWebClinica/.vs/TCPWebClinica/v17/DocumentLayout.json
