Add: se agrega nuevo proyecto de web Form, esta funcionando

--- a/TCPWebClinica/SQL/SQL.csproj
+++ b/TCPWebClinica/SQL/SQL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="StoredProcedure\StoredProcedure.sql" />
     <Content Include="Tablas\Tablas.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
