Add: llamado y verificacion de metodo

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,12 @@ TCPWebClinica/WebAppClinica/bin/roslyn/csc.exe
 TCPWebClinica/WebAppClinica/bin/roslyn/csc.rsp
 TCPWebClinica/WebAppClinica/bin/roslyn/vbc.exe
 TCPWebClinica/WebAppClinica/bin/roslyn/vbc.rsp
+TCPWebClinica/.vs/TCPWebClinica/v17/.suo
+TCPWebClinica/.vs/TCPWebClinica/v17/DocumentLayout.json
+TCPWebClinica/WebApp/bin/WebApp.pdb
+TCPWebClinica/WebApp/obj/Debug/WebApp.pdb
+TCPWebClinica/.vs/TCPWebClinica/v17/.suo
+/TCPWebClinica/WebApp/bin/WebApp.pdb
+/TCPWebClinica/WebApp/obj/Debug/WebApp.pdb
+/TCPWebClinica/.vs/TCPWebClinica/v17/DocumentLayout.json
+TCPWebClinica/.vs/TCPWebClinica/v17/DocumentLayout.json
