Fix: se corrige errores

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ TCPWebClinica/WebApp/bin/WebApp.pdb
 TCPWebClinica/.vs/TCPWebClinica/v17/DocumentLayout.json
 TCPWebClinica/.vs/TCPWebClinica/v17/.suo
 TCPWebClinica/.vs/TCPWebClinica/config/applicationhost.config
+/TCPWebClinica/.vs/TCPWebClinica/FileContentIndex/4ee0986d-2399-4408-a647-8965adf7749e.vsidx
+/TCPWebClinica/.vs/TCPWebClinica/FileContentIndex
