--- a/TCPWebClinica/SQL/SQL.csproj
+++ b/TCPWebClinica/SQL/SQL.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="StoredProcedure\SPEspecialidades.sql" />
+    <Content Include="StoredProcedure\SPEstadoTurno.sql" />
     <Content Include="StoredProcedure\SPObraSocial.sql" />
     <Content Include="StoredProcedure\SPRol.sql" />
     <Content Include="StoredProcedure\SPUsuario.sql" />
