SP recepcionista agregar, modificar, eliminar y leer

--- a/TCPWebClinica/SQL/SQL.csproj
+++ b/TCPWebClinica/SQL/SQL.csproj
@@ -48,6 +48,7 @@
     <Content Include="StoredProcedure\SPEstadoTurno.sql" />
     <Content Include="StoredProcedure\SPObraSocial.sql" />
     <Content Include="StoredProcedure\SPPacientes.sql" />
+    <Content Include="StoredProcedure\SPRecepcionista.sql" />
     <Content Include="StoredProcedure\SPRol.sql" />
     <Content Include="StoredProcedure\SPUsuario.sql" />
     <Content Include="Tablas\Tablas.sql" />
