--- a/TCPWebClinica/SQL/SQL.csproj
+++ b/TCPWebClinica/SQL/SQL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="StoredProcedure\SPAdministrador.sql" />
     <Content Include="StoredProcedure\SPEspecialidades.sql" />
     <Content Include="StoredProcedure\SPEstadoTurno.sql" />
     <Content Include="StoredProcedure\SPObraSocial.sql" />
