SP horarios_x_medico

--- a/TCPWebClinica/SQL/SQL.csproj
+++ b/TCPWebClinica/SQL/SQL.csproj
@@ -47,6 +47,7 @@
     <Content Include="StoredProcedure\SPAdministrador.sql" />
     <Content Include="StoredProcedure\SPEspecialidades.sql" />
     <Content Include="StoredProcedure\SPEstadoTurno.sql" />
+    <Content Include="StoredProcedure\SPHorario_x_Medico.sql" />
     <Content Include="StoredProcedure\SPObraSocial.sql" />
     <Content Include="StoredProcedure\SPPacientes.sql" />
     <Content Include="StoredProcedure\SPRecepcionista.sql" />
