--- a/TCPWebClinica/Business/Business.csproj
+++ b/TCPWebClinica/Business/Business.csproj
@@ -45,7 +45,10 @@
     <Compile Include="Interfaces\IAccesoDatos.cs" />
     <Compile Include="Interfaces\IEspecialidadModule.cs" />
     <Compile Include="Interfaces\IEstadoTurnoModule.cs" />
+    <Compile Include="Interfaces\IHorarioTrabajoModule.cs" />
+    <Compile Include="Interfaces\IMedicoModule.cs" />
     <Compile Include="Interfaces\IObraSocialModule.cs" />
+    <Compile Include="Interfaces\IPacienteModule.cs" />
     <Compile Include="Interfaces\IRolModule.cs" />
     <Compile Include="Interfaces\ITurnoModule.cs" />
     <Compile Include="Interfaces\IUsuariosModule.cs" />
@@ -61,7 +64,10 @@
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Modules\EspecialidadModule.cs" />
     <Compile Include="Modules\EstadoTurnoModule.cs" />
+    <Compile Include="Modules\HorarioTrabajoModule.cs" />
+    <Compile Include="Modules\MedicoModule.cs" />
     <Compile Include="Modules\ObraSocialModule.cs" />
+    <Compile Include="Modules\PacienteModule.cs" />
     <Compile Include="Modules\RolModule.cs" />
     <Compile Include="Modules\TurnoModule.cs" />
     <Compile Include="Modules\UsuariosModule.cs" />
