--- a/TCPWebClinica/WebApp/WebApp.csproj
+++ b/TCPWebClinica/WebApp/WebApp.csproj
@@ -82,11 +82,13 @@
     <Content Include="Login.aspx" />
     <Content Include="NuevaObraSocial.aspx" />
     <Content Include="NuevoPaciente.aspx" />
+    <Content Include="NuevoRecepcionista.aspx" />
     <Content Include="NuevoTurno.aspx" />
     <Content Include="NuevoUsuario.aspx" />
     <Content Include="ObrasSociales.aspx" />
     <Content Include="Pacientes.aspx" />
     <Content Include="Productos.aspx" />
+    <Content Include="Recepcionistas.aspx" />
     <Content Include="Script\AgregarCarrito.js" />
     <Content Include="Script\Filtro.js" />
     <Content Include="Script\JavaScriptNavegacion.js" />
@@ -161,6 +163,13 @@
     <Compile Include="NuevoPaciente.aspx.designer.cs">
       <DependentUpon>NuevoPaciente.aspx</DependentUpon>
     </Compile>
+    <Compile Include="NuevoRecepcionista.aspx.cs">
+      <DependentUpon>NuevoRecepcionista.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NuevoRecepcionista.aspx.designer.cs">
+      <DependentUpon>NuevoRecepcionista.aspx</DependentUpon>
+    </Compile>
     <Compile Include="NuevoTurno.aspx.cs">
       <DependentUpon>NuevoTurno.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -197,6 +206,13 @@
       <DependentUpon>Productos.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recepcionistas.aspx.cs">
+      <DependentUpon>Recepcionistas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Recepcionistas.aspx.designer.cs">
+      <DependentUpon>Recepcionistas.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Turno.aspx.cs">
       <DependentUpon>Turno.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
