--- a/TCPWebClinica/WebApp/WebApp.csproj
+++ b/TCPWebClinica/WebApp/WebApp.csproj
@@ -80,6 +80,7 @@
     <Content Include="Error.aspx" />
     <Content Include="Global.asax" />
     <Content Include="Login.aspx" />
+    <Content Include="NuevaEspecialidad.aspx" />
     <Content Include="NuevaObraSocial.aspx" />
     <Content Include="NuevoPaciente.aspx" />
     <Content Include="NuevoRecepcionista.aspx" />
@@ -148,6 +149,13 @@
     </Compile>
     <Compile Include="MasterPage.Master.designer.cs">
       <DependentUpon>MasterPage.Master</DependentUpon>
+    </Compile>
+    <Compile Include="NuevaEspecialidad.aspx.cs">
+      <DependentUpon>NuevaEspecialidad.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="NuevaEspecialidad.aspx.designer.cs">
+      <DependentUpon>NuevaEspecialidad.aspx</DependentUpon>
     </Compile>
     <Compile Include="NuevaObraSocial.aspx.cs">
       <DependentUpon>NuevaObraSocial.aspx</DependentUpon>
