--- a/TCPWebClinica/Business/Business.csproj
+++ b/TCPWebClinica/Business/Business.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Interfaces\IRolModule.cs" />
     <Compile Include="Interfaces\ITurnoModule.cs" />
     <Compile Include="Interfaces\IUsuariosModule.cs" />
+    <Compile Include="Models\Administrador.cs" />
     <Compile Include="Models\Especialidad.cs" />
     <Compile Include="Models\EstadoTurno.cs" />
     <Compile Include="Models\HorarioDeTrabajo.cs" />
@@ -64,6 +65,7 @@
     <Compile Include="Models\Rol.cs" />
     <Compile Include="Models\Turno.cs" />
     <Compile Include="Models\Usuario.cs" />
+    <Compile Include="Modules\AdministradorModule.cs" />
     <Compile Include="Modules\EnviarEmailModule.cs" />
     <Compile Include="Modules\EspecialidadModule.cs" />
     <Compile Include="Modules\EstadoTurnoModule.cs" />
