Ahora se pide loggear para usar la pagina. Saqué todos los link del nav, solo los usuarios tipo admin tienen links a todo.

--- a/TCPWebClinica/Business/Business.csproj
+++ b/TCPWebClinica/Business/Business.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Models\Recepcionista.cs" />
     <Compile Include="Models\Rol.cs" />
     <Compile Include="Models\Turno.cs" />
+    <Compile Include="Models\TurnoConPaciente.cs" />
     <Compile Include="Models\Usuario.cs" />
     <Compile Include="Modules\AdministradorModule.cs" />
     <Compile Include="Modules\EnviarEmailModule.cs" />
