--- a/TCPWebClinica/WebApp/WebApp.csproj
+++ b/TCPWebClinica/WebApp/WebApp.csproj
@@ -77,7 +77,6 @@
     <Content Include="Content\Style\StyleMasterPage.css" />
     <Content Include="Content\Style\StyleMiApp.css" />
     <Content Include="Default.aspx" />
-    <Content Include="Detalle.aspx" />
     <Content Include="Error.aspx" />
     <Content Include="Especialidades.aspx" />
     <Content Include="EstadoTurnos.aspx" />
@@ -93,7 +92,6 @@
     <Content Include="NuevoUsuario.aspx" />
     <Content Include="ObrasSociales.aspx" />
     <Content Include="Pacientes.aspx" />
-    <Content Include="Productos.aspx" />
     <Content Include="Recepcionistas.aspx" />
     <Content Include="Script\activarBoton.js" />
     <Content Include="Script\activarBotonBuscar.js" />
@@ -102,6 +100,7 @@
     <Content Include="Script\mostrarPacientesSeleccionados.js" />
     <Content Include="Script\mostrarTablaPaciente.js" />
     <Content Include="Turno.aspx" />
+    <Content Include="TurnosAsignados.aspx" />
     <Content Include="Usuarios.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -133,13 +132,6 @@
     </Compile>
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Detalle.aspx.cs">
-      <DependentUpon>Detalle.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Detalle.aspx.designer.cs">
-      <DependentUpon>Detalle.aspx</DependentUpon>
     </Compile>
     <Compile Include="Error.aspx.cs">
       <DependentUpon>Error.aspx</DependentUpon>
@@ -249,13 +241,6 @@
     <Compile Include="Pacientes.aspx.designer.cs">
       <DependentUpon>Pacientes.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Productos.aspx.cs">
-      <DependentUpon>Productos.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Productos.aspx.designer.cs">
-      <DependentUpon>Productos.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recepcionistas.aspx.cs">
       <DependentUpon>Recepcionistas.aspx</DependentUpon>
@@ -270,6 +255,13 @@
     </Compile>
     <Compile Include="Turno.aspx.designer.cs">
       <DependentUpon>Turno.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="TurnosAsignados.aspx.cs">
+      <DependentUpon>TurnosAsignados.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="TurnosAsignados.aspx.designer.cs">
+      <DependentUpon>TurnosAsignados.aspx</DependentUpon>
     </Compile>
     <Compile Include="Usuarios.aspx.cs">
       <DependentUpon>Usuarios.aspx</DependentUpon>
